# ur5_pick_and_place_opencv

./: CMakeLists.txt  README.md  package.xml
src/: pick_and_place_opencv.cpp
world/: simple_pick_and_place_collision
